--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@ setTimeout(function(){
   });
 
 
-  $(".bog, .girl, .papa, .white").mouseover(function() {
+  $(".bog, .girl, .papa, .white, .vuvu, .gregre, .moveit, .draggableble, .hoho, .cece, .wow, .kuku").mouseover(function() {
     $(".cursor").addClass("active");
   });
-  $(".bog, .girl, .papa, .white").mouseout(function() {
+  $(".bog, .girl, .papa, .white, .vuvu, .gregre, .moveit, .draggableble, .hoho, .cece, .wow, .kuku").mouseout(function() {
     $(".cursor").removeClass("active");
   });
 
