--- a/index.html
+++ b/index.html
@@ -505,6 +505,9 @@ $(document).mousemove(function (event) {
       <div class="time sun"></div>
       <p class="degree">36&deg;</p>
 </div>
+<div class="suka">
+
+</div>
 
 <div class="name">
   <h1>Vulcanalia</h1>
