--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ $(document).mousemove(function (event) {
 <div class="venusimg">
 
 </div>
-<p>Что может быть романтичнее ужина при свечах?<br> Верно, ничего.  Живое олицетворение любви&nbsp;—&nbsp;это античная богиня Венера. Она же по&nbsp;совместительству еще&nbsp;и&nbsp;любимая женщина бога Вулкана.</p>
+<p>Что может быть романтичнее ужина при свечах?<br> Верно, ничего.  Живое олицетворение любви&nbsp;—&nbsp;это античная богиня Венера. <br> Она же по&nbsp;совместительству еще&nbsp;и&nbsp;любимая женщина бога Вулкана.</p>
  <p>Древние римляне во время проведения фестиваля Вулканалия обыкновенно работали при&nbsp;свечах, вероятно, чтобы умилостивить главного виновника торжества.  Мы в&nbsp;свою очередь предлагаем Вам отвлечься&nbsp;от работы и&nbsp;насладиться благотворным влиянием огня вместе со своей второй половинкой.</p>
 </div>
 
